@@ -1,4 +1,5 @@
 Var: Search path: public
+Var: Search path: public
 Var: Standard conforming strings: off
 Time Zone: PST8PDT
 Transaction isolation level: read committed
